bueno parece q anda todo por ahora pero seguro haya q hacer cambios